--- a/EmulateUsart.ioc
+++ b/EmulateUsart.ioc
@@ -12,8 +12,8 @@ Mcu.IP6=USART1
 Mcu.IPNb=7
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PA14
 Mcu.Pin11=VP_RTC_VS_RTC_Activate
 Mcu.Pin12=VP_RTC_VS_RTC_Calendar
@@ -21,22 +21,22 @@ Mcu.Pin13=VP_RTC_No_RTC_Output
 Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin4=PD1-OSC_OUT
-Mcu.Pin5=PC0
+Mcu.Pin2=PD0-OSC_IN
+Mcu.Pin3=PD1-OSC_OUT
+Mcu.Pin4=PC0
+Mcu.Pin5=PC1
 Mcu.Pin6=PA8
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
 Mcu.Pin9=PA13
 Mcu.PinsNb=17
-Mcu.UserConstants=PERIOD,1000
+Mcu.UserConstants=PERIOD,57600
 Mcu.UserName=STM32F103RCTx
 MxCube.Version=4.19.0
 MxDb.Version=DB.4.0.190
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI15_10_IRQn=true\:1\:0\:true\:false\:true
+NVIC.EXTI1_IRQn=true\:1\:0\:true\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -60,17 +60,17 @@ PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PC0.GPIO_Label=U_EM_TX
+PC0.GPIO_Label=IO_USART_TX
 PC0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC0.Locked=true
 PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
-PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PC13-TAMPER-RTC.GPIO_Label=U_EM_RX
-PC13-TAMPER-RTC.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.Signal=GPXTI13
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC1.GPIO_Label=IO_USART_RX
+PC1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC1.GPIO_PuPd=GPIO_PULLUP
+PC1.Locked=true
+PC1.Signal=GPXTI1
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -104,14 +104,14 @@ ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=EmulateUsart.ioc
 ProjectManager.ProjectName=EmulateUsart
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=MDK-ARM V5
-ProjectManager.ToolChainLocation=D\:\\Custom\\fhjw\\EmulateUsart\\EmulateUsart
-ProjectManager.UnderRoot=false
+ProjectManager.TargetToolchain=SW4STM32
+ProjectManager.ToolChainLocation=D\:\\Custom\\arx\\EmulateUsart\\EmulateUsart
+ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_RTC_Init-RTC-false-HAL,4-MX_USART1_UART_Init-USART1-false-HAL,5-MX_TIM2_Init-TIM2-false-HAL,6-MX_TIM3_Init-TIM3-false-HAL
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
@@ -141,11 +141,14 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=PERIOD
 TIM2.Prescaler=71
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=PERIOD
+TIM3.Prescaler=71
 VP_RTC_No_RTC_Output.Mode=RTC_OUT_NO
 VP_RTC_No_RTC_Output.Signal=RTC_No_RTC_Output
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
